Se ha creado el arbol de navegacion y se le dio estilos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <header>Ubicación del Header</header>
-    <nav>Ubicación del Nav</nav>
+    <nav>
+        <ul>
+            <li style="background:#AAFFB3"><a href="#">Inicio</a></li>
+            <li><a href="./noticias.html">Noticias</a></li>
+            <li><a href="./consolas.html">Consolas</a></li>
+            <li><a href="./generos.html">Generos</a></li>
+            <li><a href="./sagas.html">Sagas</a></li>
+            <li><a href="./acercade.html">Acerca de</a></li>
+            <li><a href="./mapadelsitio.html">Mapa del sitio</a></li>
+        </ul>
+    </nav>
     <!-- Inicio primer section -->
     <article>
         <p>
