Se ha cambiado los estilos del nav, se creo la estructura de las demas paginas distintas al index y se cambio el nombre de los archivos

--- a/news.html
+++ b/news.html
@@ -11,13 +11,13 @@
     <header>Ubicación del Header</header>
     <nav>
         <ul>
-            <li ><a href="./index.html">Inicio</a></li>
-            <li style="background:#AAFFB3"><a href="./noticias.html">Noticias</a></li>
-            <li><a href="./consolas.html">Consolas</a></li>
-            <li><a href="./generos.html">Generos</a></li>
+            <li><a href="./index.html">Inicio</a></li>
+            <li><a href="./news.html">Noticias</a></li>
+            <li><a href="./consoles.html">Consolas</a></li>
+            <li><a href="./genders.html">Géneros</a></li>
             <li><a href="./sagas.html">Sagas</a></li>
-            <li><a href="./acercade.html">Acerca de</a></li>
-            <li><a href="./mapadelsitio.html">Mapa del sitio</a></li>
+            <li><a href="./about.html">Acerca de</a></li>
+            <li><a href="./sitemap.html">Mapa del sitio</a></li>
         </ul>
     </nav>
     <!-- Inicio primer section -->
