--- a/genders.html
+++ b/genders.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sagas</title>
+    <title>Géneros</title>
     <meta charset="UTF-8">
     <link href="css/estilos.css" rel="stylesheet">
     <meta name="description" content="">
