--- a/genders.html
+++ b/genders.html
@@ -8,7 +8,13 @@
     <meta name="keywords" content="">
 </head>
 <body>
-    <header>Ubicación del Header</header>
+    <header>
+        <h1>SoloJuegos</h1>
+        <div>
+            <a href="#">Login</a>
+            <a href="./sitemap.html">Mapa del sitio</a>
+        </div>
+    </header>
     <nav>
         <ul>
             <li><a href="./index.html">Inicio</a></li>
@@ -17,8 +23,7 @@
             <li><a href="./genders.html">Géneros</a></li>
             <li><a href="./sagas.html">Sagas</a></li>
             <li><a href="./about.html">Acerca de</a></li>
-            <li><a href="./sitemap.html">Mapa del sitio</a></li>
-        </ul>
+         </ul>
     </nav>
     <!-- Inicio primer section -->
     <article>
