--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pagina principal</title>
+    <title>SoloJuegos</title>
     <meta charset="UTF-8">
     <link href="css/estilos.css" rel="stylesheet">
     <meta name="description" content="">
     <meta name="keywords" content="">
 </head>
 <body>
-    <header>Ubicación del Header</header>
+    <header>
+        <h1>SoloJuegos</h1>
+        <div>
+            <a href="#">Login</a>
+            <a href="./sitemap.html">Mapa del sitio</a>
+        </div>
+    </header>
     <nav>
         <ul>
             <li><a href="./index.html">Inicio</a></li>
@@ -17,18 +23,17 @@
             <li><a href="./genders.html">Géneros</a></li>
             <li><a href="./sagas.html">Sagas</a></li>
             <li><a href="./about.html">Acerca de</a></li>
-            <li><a href="./sitemap.html">Mapa del sitio</a></li>
         </ul>
     </nav>
     <!-- Inicio primer section -->
-    <article>
+    <!--<article>
         <p>
         Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
         </p>
     </article>
     <article>
         <img src="img/estructura.PNG" alt=""/>
-    </article>
+    </article>-->
     <aside>Publicidad no paga</aside>
     <footer>Pie de pagina</footer>
 </body>
