Se agrego el contenido a las paginas, incluyendo texto e imagenes

--- a/consoles.html
+++ b/consoles.html
@@ -27,10 +27,32 @@
     </nav>
     <!-- Inicio primer section -->
     <article>
+        <h1>Ediciones de Consolas solo para Nostalgicos</h1>
+        <img src="img/por.jpg" alt=""/>     
+        <h2>Son bonitas. Son Valiosas. Son difíciles de encontrar. Son las más nostálgicas dentro de las consolas nostálgicas. Son las ediciones que nos gustaría tener en nuestras casas sin duda.</h2>
+        <h3>New Nintendo 3DS versión Super Nintendo </h3>
         <p>
+        Consolas de edición limitada que se parecen a otras consolas a modo de homenaje o llevan la saga a la que rinden tributo en toda su superficie. El mercado del hardware de sobremesa o portátil en ediciones especiales está en auge, sobre todo por lo bien que la nostalgia y el éxito por recordar viejos tiempos a través de nuevos sistemas se llevan. En el último Nintendo Direct, la gran N nos anunciaba que su portátil estrella recibiría juegos de la icónica Super Nintendo –aunque sólo el modelo New. 
+         <img src="img/snes.jpg" alt=""/>
+        </p>
+        <h3>Game Boy Advance NES-Famicon </h3>
+        <p> 
+        En esto de las consolas-homenaje y ediciones especiales, Nintendo es toda una experta y la que más ha llenado las salas de coleccionistas por todo el mundo. Y con motivo hace 12 años del 20 aniversario de la pionera NES en Japón, en 2004 salieron varios títulos de NES porteados a la Game Boy Advance, cuyo modelo SP recibió hasta dos ediciones especiales. La primera la vestía con los colores rojo y dorado y estilo puramente Famicom –la versión primigenia japo de la NES. La segunda lo hacía ya del gris y negro de NES que vimos en Occidente con los controles simulando el mando de control. Nintendostalgia pura.
+         <img src="img/gm.jpg" alt=""/>
+        </p>
+        <h3>3DS y PS3 Metal Gear Edition </h3>
+        <p>
+        Con cada nuevo Metal Gear Solid de su ya ex Hideo Kojima, Konami ha aprovechado siempre para lanzar una tonelada de merchandising incluyendo ediciones especiales de consolas. Con la épica que cerraba todo, MGS IV, concibieron una PS3 Fat con un simple acabado mate metalizado y un minúsculo logo en el extremo, consiguiendo algo tan simple como resultón. Pero para puro Meta Gear, esta 3DS sin locos, pero con el acabado de piel de serpiente ideal para el pack con el que vino de Metal Gear Solid Snake Eater 3D, y la pasta que hay que gastarse en eBay si queremos una ahora.
+        <img src="img/mg.jpg" alt=""/>
+        </p>
+        <h3>Game Boy Micro Mario 20 Aniversario</h3>
+        <p>
+       Dos décadas no se cumplen todos los días, y Nintendo quiso dejar constancia del 20 aniversario de sus pioneros sistemas de los 80 en 2005 con varias ediciones especiales. Ya hemos visto a la GBA SP vestida de Famicom, pero es que la gran N vistió también a la recién estrenada –ya en plena era DS- Game Boy Micro, que parecía talmente el mando 1 de la Famicom original con ese diseño rojo y el brillo dorado del aniversario. Es una pena que la GB Micro no fuese precisamente compatible con el hardware de GB y GB Color, pero al menos sí lo era con el catálogo GBA, aunque DS la tapó en ventas.
+        <img src="img/mario.jpg" alt=""/>
         </p>
     </article>
     <article>
+        
     </article>
     <aside>Publicidad no paga</aside>
     <footer>Pie de pagina</footer>
