--- a/index.html
+++ b/index.html
@@ -26,13 +26,31 @@
         </ul>
     </nav>
     <!-- Inicio primer section -->
-    <!--<article>
-        <p>
-        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
+    <article>
+        <h1>Ya está disponible la actualización gratuita de marzo de Star Wars: Battlefront</h1> 
+        <img src="img/sw.jpeg" alt=""/>
+        <p>     
+        Electronic Arts ha anunciado que la actualización gratuita de marzo ya está disponible en Star Wars: Battlefront.
+        Entre las novedades...<a href="./news.html">Leer mas</a>
         </p>
+        
+        <h1>Microsoft cancela Fable Legends y negocia el cierre de Lionhead Studios</h1>
+        <img src="img/lionhead.jpg" alt=""/>
+        <p>  
+        Microsoft acaba de comunicar, a través de su web oficial, el futuro cierre de Lionhead Studios y la cancelación del desarrollo de Fable Legends...<a href="./news.html">Leer mas</a>
+        </p>
+        <article>
+        <h1>Problemas con los nuevos drivers de NVIDIA</h1>
+         <img src="img/nvi.jpg" alt=""/>
+        <p>
+           NVIDIA lanzó ayer noche una serie de nuevos drivers para sus tarjetas gráficas GeForce con el objetivo de mejorar el rendimiento de The Division y Need for Speed en PC,Sin embargo...<a href="./news.html">Leer mas</a>
+            </p>
+            <h1>Ediciones de Consolas solo para Nostalgicos</h1>
+        <img src="img/por.jpg" alt=""/>     
+        <p>Son bonitas. Son Valiosas. Son difíciles de encontrar. Son las más nostálgicas dentro de las consolas nostálgicas. Son las ediciones que nos gustaría tener en nuestras casas sin duda.<a href="./news.html">Leer mas</a></p>
     </article>
     <article>
-        <img src="img/estructura.PNG" alt=""/>
+        
     </article>-->
     <aside>Publicidad no paga</aside>
     <footer>Pie de pagina</footer>
