--- a/news.html
+++ b/news.html
@@ -27,7 +27,27 @@
     </nav>
     <!-- Inicio primer section -->
     <article>
+        <h1>Problemas con los nuevos drivers de NVIDIA</h1>
+         <img src="img/nvi.jpg" alt=""/>
         <p>
+           NVIDIA lanzó ayer noche una serie de nuevos drivers para sus tarjetas gráficas GeForce con el objetivo de mejorar el rendimiento de The Division y Need for Speed en PC,Sin embargo, los usuarios de compatibles están informando de que sus equipos sufren multitud de problemas con estos drivers (versión 364.47), como pantallazos azules, imposibilidad de iniciar Windows, pantallazos negros, etcétera; La causa es desconocida, por lo que se recomienda no instalarlos hasta que NVIDIA encuentre la raíz del problema y lo solucione. En el caso de que os arriesguéis a descargarlos, es recomendable que realicéis la instalación de forma manual y evitando seleccionar la opción "Express". 
+        </p>
+        <h1>Nuevas ofertas semanales en Xbox Live</h1>
+        <img src="img/xbox-live.jpg" alt=""/>
+        <p>
+            Microsoft ha desvelado las nuevas ofertas semanales de las que podrán disfrutar los usuarios de Xbox Live Gold desde hoy y hasta el próximo día 14 de marzo, tanto para Xbox 360 como para Xbox One.Entre las ofertas de esta semana destacan juegos como Life is Strange, Mad Max, Thief, L.A. Noire y Max Payne 3, entre otros.
+        </p>
+         <h1>Ya está disponible la actualización gratuita de marzo de Star Wars: Battlefront</h1> 
+        <img src="img/sw.jpeg" alt=""/>
+        <p>     
+        Electronic Arts ha anunciado que la actualización gratuita de marzo ya está disponible en Star Wars: Battlefront.
+        Entre las novedades de este parche nos encontraremos con la llegada de una nueva misión cooperativa (que también podremos jugar solos) ambientada en Tatooine, así como un nuevo mapa multijugador en el que luchar por la causa de la Alianza Rebelde o por la gloria del Imperio en la luna de Endor.Se prevé además que durante el mes de marzo, todavía sin fecha concreta, Star Wars: Battlefront reciba su primera gran expansión de pago
+        </p>
+        <h1>Microsoft cancela Fable Legends y negocia el cierre de Lionhead Studios</h1>
+        <img src="img/lionhead.jpg" alt=""/>
+        <p>  
+        Microsoft acaba de comunicar, a través de su web oficial, el futuro cierre de Lionhead Studios y la cancelación del desarrollo de Fable Legends, el juego que estaba preparando el estudio.La beta permanecerá abierta hasta el 13 de abril, pero ya no aceptarán nuevos jugadores.
+        Estos cambios forman parte de una reestructuración dentro del seno de Microsoft Studios, que también se ha visto a cesar Press Play Studios, el equipo de desarrollo afincado en Dinamarca, que hasta la fecha estaba programando Project Knoxville, y que en su haber tienen juegos como Max: The Curse of Brotherhood y Kalimba.
         </p>
     </article>
     <article>
