Se realizo la estructura (layout) a las demas paginas, se agrego y modifico estilos al index

--- a/sitemap.html
+++ b/sitemap.html
@@ -3,14 +3,17 @@
 <head>
     <title>Mapa del sitio</title>
     <meta charset="UTF-8">
-    <link href="css/estilos.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./css/estilos-dist.css">
+    <link rel="stylesheet" href="./fonts/icomoon/style.css">
     <meta name="description" content="">
     <meta name="keywords" content="">
 </head>
 <body>
     <header>
-        <h1>SoloJuegos</h1>
-        <div>
+        <h1><a href="">Solo<span>Juegos<span></a></h1>
+        <div class="menu-header">
             <a href="#">Login</a>
             <a href="./sitemap.html">Mapa del sitio</a>
         </div>
