--- a/genders.html
+++ b/genders.html
@@ -3,43 +3,54 @@
 <head>
     <title>Géneros</title>
     <meta charset="UTF-8">
-    <link href="css/estilos.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./css/estilos-dist.css">
     <meta name="description" content="">
     <meta name="keywords" content="">
 </head>
 <body>
     <header>
-        <h1>SoloJuegos</h1>
-        <div>
+        <h1><a href="">Solo<span>Juegos<span></a></h1>
+        <div class="menu-header">
             <a href="#">Login</a>
             <a href="./sitemap.html">Mapa del sitio</a>
         </div>
     </header>
-    <nav>
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./news.html">Noticias</a></li>
-            <li><a href="./consoles.html">Consolas</a></li>
-            <li><a href="./genders.html">Géneros</a></li>
-            <li><a href="./sagas.html">Sagas</a></li>
-            <li><a href="./about.html">Acerca de</a></li>
-         </ul>
-    </nav>
-    <article>
-        <h1>LUCHA: Regreso al Pasado: Street Fighter II 25 Aniversario</h1>
-        <p>
-            <img src="img/sf.jpg" alt=""/>
-            En 1991, un videojuego apareció en los salones recreativos para poner patas arriba la industria del videojuego. En 2016 se cumplen 25 años de la aparición de dicho título al tiempo que una nueva entrega de la franquicia irrumpe en el mercado. Es el momento de homenajear a Ryu y compañía lanzando al aire una buena salva de Hadokens,Dicen que la Historia, esa con H mayúscula, esa que sienta cátedra y pasa a formar parte tanto de los libros de texto como del legado de la humanidad, la escriben los vencedores. Sin embargo, la historia que nos disponemos a narraros ahora no comienza rememorando las gestas y hazañas de un vencedor, sino de un humilde y corriente videojuego que 29 años atrás pasó de puntillas por los salones recreativos. Dicho videojuego respondía al nombre de Street Fighter. Pocos le hicieron caso en su momento, dado que adolecía de no pocos fallos que lastraban su jugabilidad, perteneciendo además a un género más que minoritario como era el de la lucha versus uno contra uno. Tampoco es que lo tuviera fácil para darse a conocer, puesto que su distribución en salones arcade estuvo muy restringida debido a la propia naturaleza de su sistema de control, el cual usaba seis botones de ataque cuando por entonces lo habitual eran dos, o a lo sumo tres botones los que un juego necesitaba para gestionar todos sus comandos.
-        </p>
-        <h1>DEPORTES:Gareth Bale protagoniza el dlc UEFA EURO 2016 de PRO EVOLUTION SOCCER</h1>
-        <p>
-            <img src="img/EURO.jpg" alt=""/>
-            Konami ha anunciado que Gareth Bale, jugador del Real Madrid e internacional galés, será la estrella de la portada de UEFA EURO 2016 en su edición física, que estará a la venta el 21 de abril para PlayStation 4 y PS3. Os recordamos que los usuarios actuales de PES 2016 en PS4, Xbox One, PS3, Xbox 360 y PC recibirán todo el contenido de la UEFA EURO 2016 con una actualización gratuita el 24 de marzo.Los compradores podrán fichar a Gareth Bale para myClub, el modo de juego que permite a través de los puntos acumulados o micro pagos crear tu propio equipo, junto con otras recompensas entre las que se incluye un Agente Embajador especial, siete Agentes Euro especiales que darán siete jugadores de los 24 equipos clasificados, y 10,000GP -dinero de juego para las transacciones- a la semana durante 10 semanas.
-        </p>
-    </article>
-    <article>
-    </article>
-    <aside>Publicidad no paga</aside>
+    <div class="contenedor">
+        <nav>
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./news.html">Noticias</a></li>
+                <li><a href="./consoles.html">Consolas</a></li>
+                <li><a href="./genders.html">Géneros</a></li>
+                <li><a href="./sagas.html">Sagas</a></li>
+                <li><a href="./about.html">Acerca de</a></li>
+             </ul>
+        </nav>
+        <div class="contenido">
+            <section class="main">
+                <article>
+                    <h1>LUCHA: Regreso al Pasado: Street Fighter II 25 Aniversario</h1>
+                    <p>
+                        <img src="img/sf.jpg" alt=""/>
+                        En 1991, un videojuego apareció en los salones recreativos para poner patas arriba la industria del videojuego. En 2016 se cumplen 25 años de la aparición de dicho título al tiempo que una nueva entrega de la franquicia irrumpe en el mercado. Es el momento de homenajear a Ryu y compañía lanzando al aire una buena salva de Hadokens,Dicen que la Historia, esa con H mayúscula, esa que sienta cátedra y pasa a formar parte tanto de los libros de texto como del legado de la humanidad, la escriben los vencedores. Sin embargo, la historia que nos disponemos a narraros ahora no comienza rememorando las gestas y hazañas de un vencedor, sino de un humilde y corriente videojuego que 29 años atrás pasó de puntillas por los salones recreativos. Dicho videojuego respondía al nombre de Street Fighter. Pocos le hicieron caso en su momento, dado que adolecía de no pocos fallos que lastraban su jugabilidad, perteneciendo además a un género más que minoritario como era el de la lucha versus uno contra uno. Tampoco es que lo tuviera fácil para darse a conocer, puesto que su distribución en salones arcade estuvo muy restringida debido a la propia naturaleza de su sistema de control, el cual usaba seis botones de ataque cuando por entonces lo habitual eran dos, o a lo sumo tres botones los que un juego necesitaba para gestionar todos sus comandos.
+                    </p>
+                    <h1>DEPORTES:Gareth Bale protagoniza el dlc UEFA EURO 2016 de PRO EVOLUTION SOCCER</h1>
+                    <p>
+                        <img src="img/EURO.jpg" alt=""/>
+                        Konami ha anunciado que Gareth Bale, jugador del Real Madrid e internacional galés, será la estrella de la portada de UEFA EURO 2016 en su edición física, que estará a la venta el 21 de abril para PlayStation 4 y PS3. Os recordamos que los usuarios actuales de PES 2016 en PS4, Xbox One, PS3, Xbox 360 y PC recibirán todo el contenido de la UEFA EURO 2016 con una actualización gratuita el 24 de marzo.Los compradores podrán fichar a Gareth Bale para myClub, el modo de juego que permite a través de los puntos acumulados o micro pagos crear tu propio equipo, junto con otras recompensas entre las que se incluye un Agente Embajador especial, siete Agentes Euro especiales que darán siete jugadores de los 24 equipos clasificados, y 10,000GP -dinero de juego para las transacciones- a la semana durante 10 semanas.
+                    </p>
+                </article>
+                <article>
+                </article>
+            </section>
+            <aside>
+                <div></div>
+                <div></div>
+            </aside>
+        </div>
+    </div>
     <footer>Pie de pagina</footer>
 </body>
 </html>
