--- a/sagas.html
+++ b/sagas.html
@@ -3,40 +3,51 @@
 <head>
     <title>Sagas</title>
     <meta charset="UTF-8">
-    <link href="css/estilos.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./css/estilos-dist.css">
     <meta name="description" content="">
     <meta name="keywords" content="">
 </head>
 <body>
     <header>
-        <h1>SoloJuegos</h1>
-        <div>
+        <h1><a href="">Solo<span>Juegos<span></a></h1>
+        <div class="menu-header">
             <a href="#">Login</a>
             <a href="./sitemap.html">Mapa del sitio</a>
         </div>
     </header>
-    <nav>
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./news.html">Noticias</a></li>
-            <li><a href="./consoles.html">Consolas</a></li>
-            <li><a href="./genders.html">Géneros</a></li>
-            <li><a href="./sagas.html">Sagas</a></li>
-            <li><a href="./about.html">Acerca de</a></li>
-        </ul>
-    </nav>
-    <!-- Inicio primer section -->
-    <article>
-        <h1>30 Años de The Legend of Zelda</h1>
-        <p>Una de las sagas más influyentes de la historia de los videojuegos cumple en este 2016 que ya se acaba 30 años. En Solojuegos queremos rendir homenaje a The Legend of Zelda, repasando los juegos que ha dejado por el camino tras más de dos décadas entre los mejores.</p>
-        <p>         
-        <img src="img/zelda.jpg" alt=""/>  
-        'It's dangerous to go Alone! Take this.' Es peligroso ir solo, toma esto. Traducción de la primera frase que pudimos leer en un The Legend of Zelda. Era el año 1986 en Japón (uno más tarde en occidente) y conocíamos por primera vez un compendio de píxels unidos todos ellos que daban forma a un joven vestido con ropajes verdes: Link. La experiencia, además, ofrecía algo que nunca se había visto antes en el mundo de los videojuegos. Han pasado 30 años desde esa primera e influyente aventura para NES, también la primera consola de Nintendo. Y el camino del héroe no se ha detenido en ningún momento en estos años, más bien al contrario. No ha parado de crecer hasta convertirse en una de las franquicias de mayor prestigio dentro del mundo de los videojuegos.
-        </p>
-    </article>
-    <article>
-    </article>
-    <aside>Publicidad no paga</aside>
+    <div class="contenedor">
+        <nav>
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./news.html">Noticias</a></li>
+                <li><a href="./consoles.html">Consolas</a></li>
+                <li><a href="./genders.html">Géneros</a></li>
+                <li><a href="./sagas.html">Sagas</a></li>
+                <li><a href="./about.html">Acerca de</a></li>
+            </ul>
+        </nav>
+        <!-- Inicio primer section -->
+        <div class="contenido">
+            <section class="main">
+                <article>
+                    <h1>30 Años de The Legend of Zelda</h1>
+                    <p>Una de las sagas más influyentes de la historia de los videojuegos cumple en este 2016 que ya se acaba 30 años. En Solojuegos queremos rendir homenaje a The Legend of Zelda, repasando los juegos que ha dejado por el camino tras más de dos décadas entre los mejores.</p>
+                    <p>         
+                    <img src="img/zelda.jpg" alt=""/>  
+                    'It's dangerous to go Alone! Take this.' Es peligroso ir solo, toma esto. Traducción de la primera frase que pudimos leer en un The Legend of Zelda. Era el año 1986 en Japón (uno más tarde en occidente) y conocíamos por primera vez un compendio de píxels unidos todos ellos que daban forma a un joven vestido con ropajes verdes: Link. La experiencia, además, ofrecía algo que nunca se había visto antes en el mundo de los videojuegos. Han pasado 30 años desde esa primera e influyente aventura para NES, también la primera consola de Nintendo. Y el camino del héroe no se ha detenido en ningún momento en estos años, más bien al contrario. No ha parado de crecer hasta convertirse en una de las franquicias de mayor prestigio dentro del mundo de los videojuegos.
+                    </p>
+                </article>
+                <article>
+                </article>
+            </section>
+            <aside>
+                <div></div>
+                <div></div>
+            </aside>
+        </div>
+    </div>
     <footer>Pie de pagina</footer>
 </body>
 </html>
