Se creo el footer y se puso el alien

--- a/module/home.html
+++ b/module/home.html
@@ -116,7 +116,8 @@
             </section>
         <!-- Finalizacion del envoltorio de los articles -->
             <aside>
-                <div></div>
-                <div></div>
+                <div>
+                    <img src="img/Marcianito_1.gif" class="imgaside">
+                </div>
             </aside>
         </div>
