Se agrego favicon y a manera de prueba una likebox al aside

--- a/module/home.html
+++ b/module/home.html
@@ -117,6 +117,7 @@
         <!-- Finalizacion del envoltorio de los articles -->
             <aside>
                 <div>
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fesyugiohwiki&tabs=false&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
                     <img src="img/Marcianito_1.gif" class="imgaside">
                 </div>
             </aside>
