--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>SoloJuegos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="shortcut icon" href="img/Favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <link rel="stylesheet" href="./css/estilos-dist.css">
     <link rel="stylesheet" href="./fonts/icomoon/style.css">
