Se agregaron nuevos estilos

--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <link rel="shortcut icon" href="img/Favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <link rel="stylesheet" href="./css/estilos-dist.css">
-    <link rel="stylesheet" href="./fonts/icomoon/style.css">
+    <link href="https://file.myfontastic.com/HmCXBidXgfC6ew5dXdxtV5/icons.css" rel="stylesheet">
     <meta name="description" content="">
     <meta name="keywords" content="">
-
 </head>
 <body>
     <div id="header"></div>
     <div id="contenedor" class="contenedor"></div>
     <div id="footer"></div>
+    <div class="social-bar">
+      <ul>
+        <li><a href="#" class="icon-facebook"></a></li>
+        <li><a href="#" class="icon-twitter"></a></li>
+        <li><a href="#" class="icon-google-plus"></a></li>
+        <li><a href="#" class="icon-rss"></a></li>
+        <li><a href="#" class="icon-youtube-play"></a></li>
+        <li><a href="https://github.com/TheLoneGunmen" target="_blank" class="icon-github"></a></li>
+      </ul>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
