Se cambio de nuevo la estructura de la pagina, se realizo el slider y se agregaron nuevos diseños a las paginas

--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
 <body>
     <div id="header">
         <header>
-            <h1><a class="tittle-style" href="index.html?pag=home">SOLO<span>JUEGOS<span></a></h1>
+            <h1><a class="tittle-style" href="index.html">SOLO<span>JUEGOS<span></a></h1>
             <div id="menu-header" class="menu-header">
-                <a href="#">Login</a>
+                <a href="login.html">Login</a>
                 <a href="./sitemap.html">Mapa del sitio</a>
             </div>
             <div id="main-nav" class="menu-bar">
@@ -41,7 +41,30 @@
     </div>
 
     <div id="contenedor" class="contenedor">
-
+        <div class="contenido">
+            <section class="main">
+                <h1 class="tittle tittle-style">ACERCA DE</h1>
+            </section>
+            <aside class="sidebar">
+                <div>
+                    <img src="img/Marcianito_1.gif" class="imgaside">
+                </div>
+                <div class="users-fans">
+                    <a href="#" class="users-fans-social social-facebook">
+                        <i class="icon-facebook"></i>Facebook
+                    </a>
+                    <a href="#" class="users-fans-social social-youtube">
+                        <i class="icon-youtube-play"></i>YouTube
+                    </a>
+                    <a href="#" class="users-fans-social social-googleplus">
+                        <i class="icon-google-plus"></i>Google+
+                    </a>
+                    <a href="#" class="users-fans-social social-twitter">
+                        <i class="icon-twitter"></i>Twitter
+                    </a>
+                </div>
+            </aside>
+        </div>
     </div>
 
     <div id="footer">
@@ -106,6 +129,7 @@
         </ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
