--- a/genders.html
+++ b/genders.html
@@ -16,9 +16,9 @@
 <body>
     <div id="header">
         <header>
-            <h1><a class="tittle-style" href="index.html?pag=home">SOLO<span>JUEGOS<span></a></h1>
+            <h1><a class="tittle-style" href="index.html">SOLO<span>JUEGOS<span></a></h1>
             <div id="menu-header" class="menu-header">
-                <a href="#">Login</a>
+                <a href="./login.html">Login</a>
                 <a href="./sitemap.html">Mapa del sitio</a>
             </div>
             <div id="main-nav" class="menu-bar">
@@ -41,7 +41,28 @@
     </div>
 
     <div id="contenedor" class="contenedor">
+        <h1 class="tittle tittle-style">GÉNEROS</h1>
+        <div class="video-slider">
+            <ul class="image-video-preview">
+                <li><a href=""><img src="http://lorempixel.com/g/400/200" alt=""></a></li>
+                <li><a href=""><img src="http://lorempixel.com/400/200" alt=""></a></li>
+                <li><a href=""><img src="http://lorempixel.com/400/200/sports" alt=""></a></li>
+                <li><a href=""><img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
+                <li><a href=""><img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
+                <li><a href=""><img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
+                <li><a href=""><img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
+            </ul>
+            <iframe id="video" width="854" height="480" src="https://www.youtube.com/embed/b6zV48U87Vs" frameborder="0" allowfullscreen></iframe>
+        </div>
 
+        <div class="contenido">
+            <section class="main">
+            </section>
+            <aside>
+                <div></div>
+                <div></div>
+            </aside>
+        </div>
     </div>
 
     <div id="footer">
@@ -106,6 +127,7 @@
         </ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
