--- a/sagas.html
+++ b/sagas.html
@@ -16,10 +16,10 @@
 <body>
     <div id="header">
         <header>
-            <h1><a class="tittle-style" href="index.html?pag=home">SOLO<span>JUEGOS<span></a></h1>
+            <h1><a class="tittle-style" href="index.html">SOLO<span>JUEGOS<span></a></h1>
             <div id="menu-header" class="menu-header">
-                <a href="#">Login</a>
-                <a href="./sitemap.html">Mapa del sitio</a>
+                <a href="./login.html">Login</a>
+                <a href="./index.html">Mapa del sitio</a>
             </div>
             <div id="main-nav" class="menu-bar">
                 <div class="uno"></div>
@@ -41,7 +41,46 @@
     </div>
 
     <div id="contenedor" class="contenedor">
-
+        <!-- Inicio primer section -->
+        <div class="contenido">
+            <section class="main">
+                <h1 class="tittle tittle-style">SAGAS</h1>
+                <article>
+                    <h2>30 Años de The Legend of Zelda</h2>
+                    <p>Una de las sagas más influyentes de la historia de los videojuegos cumple en este 2016 que ya se acaba 30 años. En Solojuegos queremos rendir homenaje a The Legend of Zelda, repasando los juegos que ha dejado por el camino tras más
+                      de dos décadas entre los mejores.
+                    </p>
+                    <img src="img/zelda.jpg" alt="" />
+                    <p>
+                        'It's dangerous to go Alone! Take this.' Es peligroso ir solo, toma esto. Traducción de la primera frase que pudimos leer en un The Legend of Zelda. Era el año 1986 en Japón (uno más tarde en occidente) y conocíamos por primera vez un compendio de píxels
+                        unidos todos ellos que daban forma a un joven vestido con ropajes verdes: Link. La experiencia, además, ofrecía algo que nunca se había visto antes en el mundo de los videojuegos. Han pasado 30 años desde esa primera e influyente
+                        aventura para NES, también la primera consola de Nintendo. Y el camino del héroe no se ha detenido en ningún momento en estos años, más bien al contrario. No ha parado de crecer hasta convertirse en una de las franquicias de mayor
+                        prestigio dentro del mundo de los videojuegos.
+                    </p>
+                </article>
+                <article>
+                </article>
+            </section>
+            <aside class="sidebar">
+                <div>
+                    <img src="img/Marcianito_1.gif" class="imgaside">
+                </div>
+                <div class="users-fans">
+                    <a href="#" class="users-fans-social social-facebook">
+                        <i class="icon-facebook"></i>Facebook
+                    </a>
+                    <a href="#" class="users-fans-social social-youtube">
+                        <i class="icon-youtube-play"></i>YouTube
+                    </a>
+                    <a href="#" class="users-fans-social social-googleplus">
+                        <i class="icon-google-plus"></i>Google+
+                    </a>
+                    <a href="#" class="users-fans-social social-twitter">
+                        <i class="icon-twitter"></i>Twitter
+                    </a>
+                </div>
+            </aside>
+        </div>
     </div>
 
     <div id="footer">
@@ -106,6 +145,7 @@
         </ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
