Se arreglo las rutas de los archivos

--- a/genders.html
+++ b/genders.html
@@ -93,13 +93,13 @@
                     <section class="last-images">
                         <div class="gallery-row">
                             <img src="img/zelda.jpg" alt="">
-                            <img src="/img/EURO.jpg" alt="">
-                            <img src="/img/sf.jpg" alt="">
+                            <img src="img/EURO.jpg" alt="">
+                            <img src="img/sf.jpg" alt="">
                         </div>
                         <div class="gallery-row">
-                            <img src="/img/consoles/mg.jpg" alt="">
-                            <img src="/img/news/starwars.jpeg" alt="">
-                            <img src="/img/consoles/nostalgic.jpg" alt="">
+                            <img src="img/consoles/mg.jpg" alt="">
+                            <img src="img/news/starwars.jpeg" alt="">
+                            <img src="img/consoles/nostalgic.jpg" alt="">
                         </div>
                     </section>
                 </div>
@@ -127,7 +127,7 @@
         </ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
