--- a/login.html
+++ b/login.html
@@ -72,13 +72,13 @@
                     <section class="last-images">
                         <div class="gallery-row">
                             <img src="img/zelda.jpg" alt="">
-                            <img src="/img/EURO.jpg" alt="">
-                            <img src="/img/sf.jpg" alt="">
+                            <img src="img/EURO.jpg" alt="">
+                            <img src="img/sf.jpg" alt="">
                         </div>
                         <div class="gallery-row">
-                            <img src="/img/consoles/mg.jpg" alt="">
-                            <img src="/img/news/starwars.jpeg" alt="">
-                            <img src="/img/consoles/nostalgic.jpg" alt="">
+                            <img src="img/consoles/mg.jpg" alt="">
+                            <img src="img/news/starwars.jpeg" alt="">
+                            <img src="img/consoles/nostalgic.jpg" alt="">
                         </div>
                     </section>
                 </div>
