--- a/genders.html
+++ b/genders.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <link rel="stylesheet" href="./css/estilos-dist.css">
-    <link href="https://file.myfontastic.com/HmCXBidXgfC6ew5dXdxtV5/icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/fontastic.css">
     <meta name="description" content="">
     <meta name="keywords" content="">
 </head>
@@ -36,6 +36,8 @@
                 <li><a href="./genders.html">Géneros</a></li>
                 <li><a href="./sagas.html">Sagas</a></li>
                 <li><a href="./about.html">Acerca de</a></li>
+                <li class="menu-items-header"><a href="./login.html">Login</a></li>
+                <li class="menu-items-header"><a href="./sitemap.html">Mapa del sitio</a></li>
             </ul>
         </nav>
     </div>
@@ -44,15 +46,29 @@
         <h1 class="tittle tittle-style">GÉNEROS</h1>
         <div class="video-slider">
             <ul class="image-video-preview">
-                <li><a href=""><img src="http://lorempixel.com/g/400/200" alt=""></a></li>
-                <li><a href=""><img src="http://lorempixel.com/400/200" alt=""></a></li>
-                <li><a href=""><img src="http://lorempixel.com/400/200/sports" alt=""></a></li>
-                <li><a href=""><img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
-                <li><a href=""><img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
-                <li><a href=""><img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
-                <li><a href=""><img src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
+                <li>
+                  <a href="#">
+                    <img data-enlace="https://www.youtube.com/embed/b6zV48U87Vs" class="image-video" src="http://img.youtube.com/vi/b6zV48U87Vs/hqdefault.jpg" alt=""></a></li>
+                <li>
+                  <a href="#">
+                    <img data-enlace="https://www.youtube.com/embed/c7nRTF2SowQ" class="image-video" src="http://img.youtube.com/vi/c7nRTF2SowQ/hqdefault.jpg" alt=""></a></li>
+                <li>
+                  <a href="#">
+                    <img data-enlace="https://www.youtube.com/embed/ENkfuzeBdRE" class="image-video" src="http://img.youtube.com/vi/ENkfuzeBdRE/hqdefault.jpg" alt=""></a></li>
+                <li>
+                  <a href="#">
+                    <img data-enlace="https://www.youtube.com/embed/qArxw_RQV9U" class="image-video" src="http://img.youtube.com/vi/qArxw_RQV9U/hqdefault.jpg" alt=""></a></li>
+                <li>
+                  <a href="#">
+                    <img data-enlace="https://www.youtube.com/embed/YhiP5FBcCXc" class="image-video" src="http://img.youtube.com/vi/YhiP5FBcCXc/hqdefault.jpg" alt=""></a></li>
+                <li>
+                  <a href="#">
+                    <img data-enlace="https://www.youtube.com/watch?v=CfihYWRWRTQ" class="image-video" src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
+                <li>
+                  <a href="#">
+                    <img data-enlace="https://www.youtube.com/watch?v=CfihYWRWRTQ" class="image-video" src="http://lorempixel.com/400/200/sports/Dummy-Text" alt=""></a></li>
             </ul>
-            <iframe id="video" width="854" height="480" src="https://www.youtube.com/embed/b6zV48U87Vs" frameborder="0" allowfullscreen></iframe>
+            <iframe id="video-slider" width="854" height="480" src="https://www.youtube.com/embed/b6zV48U87Vs" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="contenido">
