--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <link rel="stylesheet" href="./css/estilos-dist.css">
-    <link href="https://file.myfontastic.com/HmCXBidXgfC6ew5dXdxtV5/icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/fontastic.css">
     <meta name="description" content="">
     <meta name="keywords" content="">
 </head>
@@ -34,6 +34,8 @@
               <li><a href="./genders.html">Géneros</a></li>
               <li><a href="./sagas.html">Sagas</a></li>
               <li><a href="./about.html">Acerca de</a></li>
+              <li class="menu-items-header"><a href="./login.html">Login</a></li>
+              <li class="menu-items-header"><a href="./sitemap.html">Mapa del sitio</a></li>
           </ul>
       </nav>
     </div>
