--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <link rel="stylesheet" href="./css/estilos-dist.css">
-    <link href="https://file.myfontastic.com/HmCXBidXgfC6ew5dXdxtV5/icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/fontastic.css">
     <meta name="description" content="">
     <meta name="keywords" content="">
 </head>
@@ -36,6 +36,8 @@
                 <li><a href="./genders.html">Géneros</a></li>
                 <li><a href="./sagas.html">Sagas</a></li>
                 <li><a href="./about.html">Acerca de</a></li>
+                <li class="menu-items-header"><a href="./login.html">Login</a></li>
+                <li class="menu-items-header"><a href="./sitemap.html">Mapa del sitio</a></li>
             </ul>
         </nav>
     </div>
@@ -106,6 +108,7 @@
         </ul>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
